tests/e2e/semantics/try_scope.error
Error: syntax error in story at line 5, column 5

5|    c = a
          ^

E0101: Variable `a` has not been defined.
